--- a/about-us.html
+++ b/about-us.html
@@ -36,7 +36,7 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/logo-default-151x44.png" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="151" height="44" srcset="https://archstonekenya.com/img/final6.jpg"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -82,7 +82,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(https://images.pexels.com/photos/323772/pexels-photo-323772.jpeg);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url();">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -307,7 +307,7 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="115" height="34" srcset="images/logo-light-115x34.png 2x"/></a>
+                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="115" height="34" srcset="https://archstonekenya.com/img/final6.jpg"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. All Rights Reserved. </p>
                   </div>
