--- a/contacts.html
+++ b/contacts.html
@@ -16,7 +16,7 @@
   <body>
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <div class="preloader">
-      <div class="preloader-logo"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/>
+      <div class="preloader-logo"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="151" height="44" srcset="https://archstonekenya.com/img/final6.jpg"/>
       </div>
       <div class="preloader-body">
         <div id="loadingProgressG">
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="page">
-      <!-- Page Header--><a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a>
+      <!-- Page Header<a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a> -->
       <header class="section novi-background page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
@@ -36,7 +36,7 @@
                 <div class="rd-navbar-panel">
                   <!-- RD Navbar Toggle-->
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle="#rd-navbar-nav-wrap-1"><span></span></button>
-                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="images/logo-default-151x44.png" alt="" width="151" height="44" srcset="images/logo-default-151x44.png 2x"/></a>
+                  <!-- RD Navbar Brand--><a class="rd-navbar-brand" href="index.html"><img src="https://archstonekenya.com/img/final6.jpg" alt="" width="151" height="44" srcset="https://archstonekenya.com/img/final6.jpg"/></a>
                 </div>
                 <div class="rd-navbar-collapse">
                   <button class="rd-navbar-collapse-toggle rd-navbar-fixed-element-1" data-rd-navbar-toggle="#rd-navbar-collapse-content-1"><span></span></button>
@@ -45,14 +45,16 @@
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-phone"></span></div>
                       <div class="unit-body">
                         <ul class="list-0">
-                          <li><a class="link-default" href="tel:#">1-800-1234-567</a></li>
-                          <li><a class="link-default" href="tel:#">1-800-8763-765</a></li>
+                          <ul class="list-0">
+                            <li><a class="link-default" href="tel:#">+254 720 134 987</a></li>
+                            <li><a class="link-default" href="tel:#">+254 788 431 125</a></li>
+                          </ul>
                         </ul>
                       </div>
                     </article>
                     <article class="unit align-items-center">
                       <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div>
-                      <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div>
+                      <div class="unit-body"><a class="link-default" href="tel:#">Pan African Insurance Ave, <br> Nairobi</a></div>
                     </article><a class="button button-gray-bordered button-winona" href="#">Request a call</a>
                   </div>
                 </div>
@@ -103,19 +105,21 @@
               <div class="layout-bordered-item-inner wow slideInUp">
                 <div class="icon novi-icon icon-lg mdi mdi-phone text-primary"></div>
                 <ul class="list-0">
-                  <li><a class="link-default" href="tel:#">1-800-1234-678</a></li>
-                  <li><a class="link-default" href="tel:#">1-800-9876-098</a></li>
+                  <ul class="list-0">
+                    <li><a class="link-default" href="tel:#">+254 720 134 987</a></li>
+                    <li><a class="link-default" href="tel:#">+254 788 431 125</a></li>
+                  </ul>
                 </ul>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto:#">info@demolink.org</a>
+                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto:#">info@archstonekenya.com</a>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" href="#">2130 Fulton Street San Diego, CA 94117-1080 USA</a>
+                <div class="icon novi-icon icon-lg mdi mdi-map-marker text-primary"></div><a class="link-default" href="tel:#">Pan African Insurance Ave, <br> Nairobi</a>
               </div>
             </div>
           </div>
