--- a/about-us.html
+++ b/about-us.html
@@ -105,7 +105,7 @@
               <p class="about-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostru eiusmod tempor incididunt ut labore et.</p><a class="button button-lg button-primary button-winona" href="about-us.html">View properties</a>
             </div>
-            <div class="col-md-10 col-lg-6 col-xl-6"><img class="img-responsive" src="images/careers-1-570x388.jpg" alt="" width="570" height="388"/>
+            <div class="col-md-10 col-lg-6 col-xl-6"><img class="img-responsive" src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="570" height="388"/>
             </div>
           </div>
         </div>
@@ -146,8 +146,8 @@
                 <h5 class="counter-minimal-title">Years of Experience</h5>
               </article>
             </div>
-            <div class="col-6 col-md-3 wow-outer">
-              <!-- Counter Minimal-->
+            <!-- <div class="col-6 col-md-3 wow-outer">
+              
               <article class="counter-minimal wow slideInUp" data-wow-delay=".1s">
                 <div class="counter-minimal-icon box-chloe__icon novi-icon linearicons-apartment"></div>
                 <div class="counter-minimal-main">
@@ -155,7 +155,7 @@
                 </div>
                 <h5 class="counter-minimal-title">Qualified Brokers</h5>
               </article>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
