--- a/index.html
+++ b/index.html
@@ -228,25 +228,25 @@
           <div class="row row-35 row-xxl-70 offset-top-2">
             <div class="col-sm-6 col-lg-3">
               <!-- Thumbnail Light-->
-              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="images/service-thumbnail-1-270x300.jpg" alt="" width="270" height="300"/></a>
+              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="https://livedemo00.template-help.com/wt_51575/images/service-thumbnail-1-270x300.jpg" alt="" width="270" height="300"/></a>
                 <h4 class="thumbnail-light-title"><a href="#">Single-Family Homes</a></h4>
               </article>
             </div>
             <div class="col-sm-6 col-lg-3">
               <!-- Thumbnail Light-->
-              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="images/service-thumbnail-2-270x300.jpg" alt="" width="270" height="300"/></a>
+              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="https://livedemo00.template-help.com/wt_51575/images/service-thumbnail-2-270x300.jpg" alt="" width="270" height="300"/></a>
                 <h4 class="thumbnail-light-title"><a href="#">Townhouses</a></h4>
               </article>
             </div>
             <div class="col-sm-6 col-lg-3">
               <!-- Thumbnail Light-->
-              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="images/service-thumbnail-3-270x300.jpg" alt="" width="270" height="300"/></a>
-                <h4 class="thumbnail-light-title"><a href="#">Multi-Family Homes</a></h4>
+              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="https://livedemo00.template-help.com/wt_51575/images/service-thumbnail-3-270x300.jpg" alt="" width="270" height="300"/></a>
+                <h4 class="thumbnail-light-title"><a href="#">Ambassadorial Homes</a></h4>
               </article>
             </div>
             <div class="col-sm-6 col-lg-3">
               <!-- Thumbnail Light-->
-              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="images/service-thumbnail-4-270x300.jpg" alt="" width="270" height="300"/></a>
+              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="http://archstonekenya.com/images/fulls/offf1.jpg" alt="" width="270" height="300"/></a>
                 <h4 class="thumbnail-light-title"><a href="#">Offices</a></h4>
               </article>
             </div>
@@ -324,10 +324,10 @@
       <!-- Best offer-->
       <section class="section novi-background section-1 bg-primary-darker text-center" style="background-image: url(images/bg-1-1920-455.jpg);">
         <div class="container">
-          <div class="row justify-content-center">
+          <div class="row justify-content-center" style="color: #007bff;">
             <div class="col-sm-10 col-lg-7 col-xl-6">
-              <h3 class="wow-outer"><span class="wow slideInDown text-uppercase">Best offers</span></h3>
-              <p class="heading-subtitle">of September</p>
+              <h3 class="wow-outer"><span class="wow slideInDown text-uppercase" style="color: #007bff;">Best offers</span></h3>
+              <p class="heading-subtitle" style="color: #007bff;">of September</p>
               <p class="wow-outer offset-top-4"><span class="wow slideInDown" data-wow-delay=".05s">With a variety of accountants available at our company, you can always choose one that fits your corporate requirements.</span></p>
               <div class="wow-outer button-outer"><a class="button button-primary-white button-winona wow slideInDown" href="#" data-wow-delay=".1s">Read more</a></div>
             </div>
