--- a/contacts.html
+++ b/contacts.html
@@ -84,7 +84,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(images/breadcrumbs-image-1.jpg);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url();">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
