--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
       </section> -->
       <!-- Best offer-->
-      <section class="section novi-background section-1 bg-primary-darker text-center" style="background-image: url(images/bg-1-1920-455.jpg);">
+      <section class="section novi-background section-1 bg-primary-darker text-center" style="background-image: url();">
         <div class="container">
           <div class="row justify-content-center" style="color: #007bff;">
             <div class="col-sm-10 col-lg-7 col-xl-6">
