--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url();">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(https://images.pexels.com/photos/7018406/pexels-photo-7018406.jpeg?auto=compress&cs=tinysrgb&w=600);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
@@ -105,7 +105,7 @@
               <p class="about-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostru eiusmod tempor incididunt ut labore et.</p><a class="button button-lg button-primary button-winona" href="about-us.html">View properties</a>
             </div>
-            <div class="col-md-10 col-lg-6 col-xl-6"><img class="img-responsive" src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="570" height="388"/>
+            <div class="col-md-10 col-lg-6 col-xl-6"><img class="img-responsive" src="https://images.pexels.com/photos/7018391/pexels-photo-7018391.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="570" height="388"/>
             </div>
           </div>
         </div>
@@ -257,24 +257,23 @@
                     <div class="col-sm-5 col-md-7 col-lg-4">
                       <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
                       <div class="row row-x-10" data-lightgallery="group">
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-1-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/RD1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-2-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/lvv.jpeg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-3-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/DOC1..jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-4-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/propM29.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-5-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/RD1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-6-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/Simon3.jpg" alt="">
                             <div class="thumbnail-minimal-caption"> </div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-7-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/NYA1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-8-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/IMG-20230416-WA0000.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
                       </div>
-                    </div>
                   </div>
                 </div>
               </div>
