--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <div class="title-docor-text font-weight-bold title-decorated text-uppercase wow slideInLeft text-white">Offering Diverse</div>
                 </div>
                 <h1 class="text-uppercase text-white font-weight-bold wow-outer"><span class="wow slideInDown" data-wow-delay=".2s">Properties</span></h1>
-                <p class="text-white wow-outer"><span class="wow slideInDown" data-wow-delay=".35s">inHouse provides you with lots of great properties throughout the USA so that you could easily choose your dream property.</span></p>
+                <p class="text-white wow-outer"><span class="wow slideInDown" data-wow-delay=".35s">inHouse provides you with lots of great properties throughout the Kenya so that you could easily choose your dream property.</span></p>
                 <div class="wow-outer button-outer"><a class="button button-md button-primary button-winona wow slideInDown" href="#" data-wow-delay=".4s">View Properties</a></div>
               </div>
             </div>
@@ -234,7 +234,7 @@
             </div>
             <div class="col-sm-6 col-lg-3">
               <!-- Thumbnail Light-->
-              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="https://livedemo00.template-help.com/wt_51575/images/service-thumbnail-2-270x300.jpg" alt="" width="270" height="300"/></a>
+              <article class="thumbnail-light"><a class="thumbnail-light-media" href="#"><img class="thumbnail-light-image" src="http://archstonekenya.com/images/fulls/IMG-20230416-WA0000.jpg" alt="" width="270" height="300"/></a>
                 <h4 class="thumbnail-light-title"><a href="#">Townhouses</a></h4>
               </article>
             </div>
@@ -322,7 +322,7 @@
         </div>
       </section> -->
       <!-- Best offer-->
-      <section class="section novi-background section-1 bg-primary-darker text-center" style="background-image: url();">
+      <!-- <section class="section novi-background section-1 bg-primary-darker text-center" style="background-image: url();">
         <div class="container">
           <div class="row justify-content-center" style="color: #007bff;">
             <div class="col-sm-10 col-lg-7 col-xl-6">
@@ -333,7 +333,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="section novi-background section-lg text-center">
         <div class="container">
           <h3 class="wow-outer"><span class="wow slideInDown text-uppercase">Testimonials</span></h3>
@@ -341,7 +341,7 @@
           <div class="owl-carousel wow fadeIn" data-items="1" data-md-items="2" data-lg-items="3" data-dots="true" data-nav="false" data-loop="true" data-autoplay="true" data-autoplay-speed="731" data-autoplay-timeout="4268" data-margin="30" data-stage-padding="0" data-mouse-drag="false">
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-6-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Albert Webb</cite>
@@ -354,7 +354,7 @@
             </blockquote>
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-1-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Kelly McMillan</cite>
@@ -367,7 +367,7 @@
             </blockquote>
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-2-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Harold Barnett</cite>
@@ -380,7 +380,7 @@
             </blockquote>
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-3-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Bill Warner</cite>
@@ -393,7 +393,7 @@
             </blockquote>
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-4-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Ann Lee</cite>
@@ -406,7 +406,7 @@
             </blockquote>
             <blockquote class="quote-classic">
               <div class="quote-classic-meta">
-                <div class="quote-classic-avatar"><img src="images/testimonials-person-5-96x96.jpg" alt="" width="96" height="96"/>
+                <div class="quote-classic-avatar"><img src="https://images.pexels.com/photos/3799124/pexels-photo-3799124.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" width="96" height="96"/>
                 </div>
                 <div class="quote-classic-info">
                   <cite class="quote-classic-cite">Peter Clarkson</cite>
@@ -451,21 +451,21 @@
                     <div class="col-sm-5 col-md-7 col-lg-4">
                       <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
                       <div class="row row-x-10" data-lightgallery="group">
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-1-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/RD1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-2-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/lvv.jpeg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-3-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/DOC1..jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-4-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/propM29.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-5-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/RD1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-6-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/Simon3.jpg" alt="">
                             <div class="thumbnail-minimal-caption"> </div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-7-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/NYA1.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-8-85x85.jpg" alt="">
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="http://archstonekenya.com/images/fulls/IMG-20230416-WA0000.jpg" alt="">
                             <div class="thumbnail-minimal-caption"></div></a></div>
                       </div>
                     </div>
